system-components/envoy/public-gateway.backend.policy.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: public-gateway-backend-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
  mergeType: "StrategicMerge"
  tcpKeepalive:
    probes: 9
    idleTime: "7200s"
    interval: "75s"
  circuitBreaker:
    maxConnections: 1024
    maxPendingRequests: 1024
    maxParallelRequests: 1024
  rateLimit:
    type: Local
    local:
      rules:
        - clientSelectors:
            - headers:
                - name: x-real-ip
                  invert: false
                  type: Distinct
          limit:
            requests: 100
            unit: Second
